# twosumarmy-core

./: README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  enums.py  main.py  models.py  schemas.py  tagger.py
backend/app/crud/: transaction.py
backend/app/models/: transaction.py
backend/app/routers/: balance.py  file_upload.py  transaction.py
backend/app/schemas/: transaction.py
backend/data/: companies.csv
ui/: README.md  openapitools.json  package-lock.json  package.json  tailwind.config.js
ui/src/: App.test.tsx  App.tsx  index.tsx
ui/src/components/Alert/: Alert.tsx
ui/src/components/AppLayout/: AppLayout.tsx
ui/src/components/Badge/: Badge.tsx  MoneyBadge.tsx
ui/src/components/Button/: Button.tsx
ui/src/components/FileInput/: FileInput.tsx
ui/src/components/Stats/: Stats.tsx
ui/src/components/Table/: Body.tsx  Container.tsx  DataCell.tsx  Head.tsx  HeadCell.tsx  Row.tsx  index.ts
ui/src/components/UserLayout/: UserLayout.tsx
ui/src/constants/: navigation.ts
ui/src/lib/: api.ts  environment.ts  money.ts
ui/src/pages/: DashboardPage.tsx  TransactionListPage.tsx  UploadFilePage.tsx
ui/src/redux/: store.ts
ui/src/redux/reducers/: balanceSlice.ts  flowSlice.ts  transactionSlice.spec.tsx  transactionSlice.ts
ui/src/stories/: Badge.stories.tsx  Button.stories.tsx  Introduction.stories.mdx  Stats.stories.tsx  Table.stories.tsx
