[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["steven-mi", "abteilung6"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.79.0"
hypercorn = "^0.13.2"
python-multipart = "^0.0.5"
pandas = "0.24.2"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
